--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/MQ.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    
 </head>
 <body>
     <main>
@@ -17,7 +19,25 @@
             <div id="form">
                 <h1>Login</h1>
                 <p>Seja bem vindo(a) novamente.</p>
-                <form action="login.js" method="post"></form>
+                <form action="login.js" method="post">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">login</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail." autocomplete="email"
+                         maxlength="30">
+                        <label for="ilogin"></label>
+                    </div>
+                    <div class="campo">  
+                        <span class="material-symbols-outlined">
+                            key
+                            </span>           
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8">   
+                         <label for="isenha"></label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esuqeci.html">Esqueci a senha
+                      <i class="material-symbols-outlined">mail</i>  
+                    </a>
+                </form>
 
             </div>
         </section>
