--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                          <label for="isenha"></label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esuqeci.html">Esqueci a senha
+                    <a class="botao" href="esuqeci.html">Esqueci a senha
                       <i class="material-symbols-outlined">mail</i>  
                     </a>
                 </form>
