--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             </div>
             <div id="form">
                 <h1>Login</h1>
-                <p>Seja bem vindo(a) novamente.</p>
+               
                 <form action="login.js" method="post">
                     <div class="campo">
                         <span class="material-symbols-outlined">login</span>
-                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail." autocomplete="email"
+                        <input type="email" name="login" id="ilogin" placeholder="Digite seu e-mail." autocomplete="email"
                          maxlength="30">
                         <label for="ilogin"></label>
                     </div>
@@ -30,7 +30,7 @@
                         <span class="material-symbols-outlined">
                             key
                             </span>           
-                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8">   
+                        <input type="password" name="senha" id="isenha" placeholder="Digite sua senha." autocomplete="current-password" required minlength="8">   
                          <label for="isenha"></label>
                     </div>
                     <input type="submit" value="Entrar">
